--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -7,14 +7,15 @@
         <title><%= data.title %></title>
         <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon">
         <!-- css -->
+        <link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/public/css/base.css">
         <link rel="stylesheet" type="text/css" href="/public/lib/popup/popup.css">
         <link rel="stylesheet" type="text/css" href="/public/lib/page/page.css">
         <link rel="stylesheet" type="text/css" href="/public/lib/calendar/zane-calendar.min.css">
         <!-- js -->
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.0/jquery.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/vue/2.5.0/vue.min.js"></script>
-        <script src="//cdn.bootcss.com/echarts/3.8.0/echarts.min.js"></script>
+        <script src="/public/lib/jquery/3.3.0/jquery.min.js"></script>
+        <script src="/public/lib/vue/2.5.0/vue.min.js"></script>
+        <script src="/public/lib/echarts/3.8.0/echarts.min.js"></script>
         <script src="/public/lib/popup/popup.js"></script>
         <script src="/public/lib/page/page.js"></script>
         <script src="/public/js/config.js"></script>
