--- a/app/view/layout.html
+++ b/app/view/layout.html
@@ -43,7 +43,7 @@
             <% include ./footer.html %>
         </div>
         <div id="footer">
-            Copyright &copy; 2018-2020 前端性能监控平台
+            Copyright &copy; 2018-2021 FDMPS
         </div>
     </body>
 </html>
